# tmux-quickselect

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.nuon  config.toml  install.sh  qs.nu
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
Formula/: tmux-quickselect.rb
shell/: qs.bash  qs.nu  qs.zsh
src/: app.rs  config.rs  history.rs  main.rs  scanner.rs  tmux.rs  ui.rs
