[package]
name = "tmux-quickselect"
version = "2.0.0"
edition = "2024"
description = "Fast, interactive directory selector for tmux"
license = "MIT"
repository = "https://github.com/cvrt-jh/tmux-quickselect"

[[bin]]
name = "qs"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
